--- a/apps/while-hungry/src/app/components/recipes/recipes-overview/recipes-overview-item/recipes-overview-item.component.scss
+++ b/apps/while-hungry/src/app/components/recipes/recipes-overview/recipes-overview-item/recipes-overview-item.component.scss
@@ -1,9 +1,40 @@
+@import './../../../../../styles/base/colors';
+
 .recipe {
   margin: 10px;
-  
+  border: 3px solid $primary;
+  border-radius: 0;
+  position: relative;
+
+  &__favorite {
+    position: absolute;
+    top: 7%;
+    right: 10%;
+    border-radius: 50%;
+    padding: 10px;
+    background: rgba($grey-light, 0.3);
+    cursor: pointer;
+
+    &:hover {
+      background: rgba($grey-light, 0.5);
+    }
+
+    mat-icon {
+      font-size: 25px;
+    }
+  }
+
   mat-card-header, mat-card-content, mat-card-footer, mat-divider {
-    width: 70%;
+    width: 90%;
     margin: 0 auto;
+  }
+
+  &__picture {
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
   }
   
   &__header {
@@ -24,7 +55,7 @@
       width: 100%;
 
       span {
-        font-size: 18px;
+        font-size: 14px;
         
         mat-icon {
           margin-right: 5px;
@@ -51,6 +82,30 @@
   }
 
   &__footer {
+    width: 100%;
+
+    &__infos {
+      width: 100%;
+
+      &__user {
+        &__avatar {
+          width: 30px;
+          height: 30px;
+          margin-right: 5px;
+        }
+
+        &__nickname {
+          text-transform: uppercase;
+          font-weight: 500;
+          font-size: 12px;
+        }
+      }
+
+      &__date {
+        font-size: 12px;
+        font-weight: 500;
+      }
+    }
     &__likes {
       mat-icon {
         cursor: pointer;
